Adjusting first sample.

--- a/src/Samples/LifeEvents/LifeEvents.csproj
+++ b/src/Samples/LifeEvents/LifeEvents.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <ApplicationIcon />
+    <OutputType>Exe</OutputType>
+    <StartupObject>LifeEvents.Program</StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Timely\Timely.csproj" />
+  </ItemGroup>
 
 </Project>
